src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail27.jova
class Test{

    Test() {
        int x;
    }

    Test(int test) {
        int x;
    }

    Test(String s) {
        String x;
        int x;
    }

}

